<resources>
    <string name="app_name" translatable="false">WMS Notes</string>

    <!-- TODO remove -->
    <string name="action_settings">Settings</string>

    <!-- General -->
    <string name="create">Create</string>

    <!-- Activities -->
    <!--<string name="title_activity_main" translatable="false">Main Activity</string>-->
    <string name="title_activity_detail" translatable="false">Detail Activity</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Permissions -->
    <string name="storage_permission_request" translatable="false">WMS Notes stores your notes on your device. Please provide permission to store your notes.</string>
    <string name="storage_permission_denied" translatable="false">WMS Notes cannot work without permission to store notes.</string>

    <!-- Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_category_synchronization_key" translatable="false">synchronization</string>
    <string name="pref_category_synchronization_title">Synchronization</string>
    <string name="pref_server_hostname_key" translatable="false">server_hostname</string>
    <string name="pref_server_hostname_title">Server</string>
    <string name="pref_server_hostname_summary">The hostname or IP address of the server to synchronize to</string>
    <string name="pref_server_hostname_default" translatable="false" /> <!-- 10.0.2.2 -->
    <string name="pref_synchronization_enabled_key" translatable="false">synchronization_enabled</string>
    <string name="pref_synchronization_enabled_title">Enable synchronization</string>
    <bool name="pref_synchronization_enabled_default" translatable="false">false</bool>

    <!-- MainActivity -->
    <string name="drawer_item_debug" translatable="false">Debug</string>
    <string name="drawer_item_notes">Notes</string>
    <string name="drawer_item_settings">Settings</string>

    <!-- NavigationFragment -->
    <string name="navigation_create_note">Create Note</string>
    <string name="navigation_create_folder">Create Folder…</string>
    <string name="navigation_delete">Delete</string>
    <string name="navigation_item_icon">Icon</string>
    <string name="navigation_move_to_folder">Move To Folder…</string>
    <string name="navigation_rename_folder">Rename…</string>
    <string name="create_folder_dialog_title">Create Folder</string>
    <string name="create_folder_dialog_error_title_must_not_be_empty">The folder name must not be empty</string>
    <string name="create_folder_dialog_error_title_must_not_contain_slash">Illegal character: \'/\'</string>

    <!-- DetailActivity -->
    <string name="detail_save">Save</string>
    <string name="detail_delete">Delete</string>
    <string name="detail_dismiss_dialog_title">Unsaved changes</string>
    <string name="detail_dismiss_dialog_message">You have unsaved changes.</string>
    <string name="detail_dismiss_dialog_save">Save</string>
    <string name="detail_dismiss_dialog_discard">Discard</string>
    <string name="detail_content_hint">Start typing your note here…</string>

    <!-- Other -->
    <string name="new_note_title">New Note on Android</string>
</resources>
