<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="@string/pref_category_synchronization_key"
        app:title="@string/pref_category_synchronization_title">

        <SwitchPreferenceCompat
            app:key="@string/pref_synchronization_enabled_key"
            app:title="@string/pref_synchronization_enabled_title" />

        <EditTextPreference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            app:defaultValue="@string/pref_server_hostname_default"
            app:key="@string/pref_server_hostname_key"
            app:title="@string/pref_server_hostname_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
